# advent_of_code

2019/: names.rb  solutions.rb
2021/: solutions.rb
2024/: Cargo.toml
2024/src/: main.rs
2025/: aoc.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  matrix.py  pyproject.toml
