[project]
name = "2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ipython-autoimport>=0.5.1",
    "isort>=6.1.0",
    "pyright[nodejs]>=1.1.406",
    "pytest>=8.4.2",
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]
